--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             background-color: #f4f4f4;
         }
         .container {
-            width: 400px;
+            max-width: 600px;
             margin: 0 auto;
             margin-top: 50px;
             padding: 20px;
@@ -43,7 +43,10 @@
         }
         @media only screen and (max-width: 600px) {
             .container {
-                width: 90%;
+                margin-top: 20px;
+                border-radius: 0;
+                box-shadow: none;
+                padding: 10px;
             }
         }
     </style>
