--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Informasi Pelanggan SATRIA.NET</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <html>
+            <head>
+                <title>Informasi Pelanggan SATRIA.NET</title>
+                  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
         .container {
             max-width: 600px;
@@ -14,8 +16,8 @@
             margin-top: 50px;
             padding: 20px;
             background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
         }
         table {
             width: 100%;
@@ -29,55 +31,50 @@
         th {
             background-color: #f2f2f2;
         }
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #333;
+        }
         .btn {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: #4CAF50;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
-            margin-top: 20px;
+            transition: background-color 0.3s ease;
         }
         .btn:hover {
-            background-color: #0056b3;
+            background-color: #45a049;
         }
         @media only screen and (max-width: 600px) {
             .container {
-                margin-top: 20px;
-                border-radius: 0;
-                box-shadow: none;
-                padding: 10px;
+                width: 90%;
             }
         }
     </style>
-</head>
-<body>
-    <div class="container">
-        <?php
-        if (count($read) > 0) {
-            $user = $read[0];
-            ?>
-            <h2 style="text-align:center;">Informasi Pelanggan Hotspot SATRIA.NET</h2>
-            <table>
-                <tr>
-                    <th>Username</th>
-                    <td><?php echo $user['name']; ?></td>
-                </tr>
-                <tr>
-                    <th>Password</th>
-                    <td><?php echo $user['password']; ?></td>
-                </tr>
-                <tr>
-                    <th>Jenis Langganan</th>
-                    <td><?php echo $user['profile']; ?></td>
-                </tr>
-            </table>
-            <center><a href="javascript:history.go(-1);" class="btn">Tekan Disini Untuk Kembali Cek User</a></center>
-            <?php
-        } else {
-            echo "Pengguna dengan username $usernameToCheck tidak ditemukan.";
-        }
-        ?>
-    </div>
-</body>
-</html>
+            </head>
+            <body>
+                <div class="container">
+                    <h2><center>Informasi Pelanggan Hotspot SATRIA.NET</center></h2>
+                    <table>
+                        <tr>
+                            <th>Username</th>
+                            <td><?php echo $user['name']; ?></td>
+                        </tr>
+                        <tr>
+                            <th>Password</th>
+                            <td><?php echo $user['password']; ?></td>
+                        </tr>
+                        <tr>
+                            <th>Jenis Langganan</th>
+                            <td><?php echo $user['profile']; ?></td>
+                        </tr>
+                    </table>
+                </div>
+                <div style="text-align:center;margin-top:20px;">
+                <a href="javascript:history.go(-1);" class="btn">Kembali</a>
+            </div>
+            </body>
+            </html>
