--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
                     <h2><center>Informasi Pelanggan Hotspot SATRIA.NET</center></h2>
                     <table>
                         <tr>
-                            <th>Username</th>
+                            <th>Username :</th>
                             <td><?php echo $user['name']; ?></td>
                         </tr>
                         <tr>
-                            <th>Password</th>
+                            <th>Password :</th>
                             <td><?php echo $user['password']; ?></td>
                         </tr>
                         <tr>
-                            <th>Jenis Langganan</th>
+                            <th>Jenis Langganan :</th>
                             <td><?php echo $user['profile']; ?></td>
                         </tr>
                     </table>
