--- a/index.html
+++ b/index.html
@@ -4,40 +4,69 @@
     <title>Informasi Pelanggan SATRIA.NET</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-image: url('https://telegra.ph/file/c0afbde55ab71538a6dda.jpg');
-            background-size: cover;
-            background-position: center;
-            margin: 0;
-            padding: 0;
-            height: 100vh; /* Tinggi minimum untuk memastikan gambar latar belakang ditampilkan dengan baik */
+        body, html {
+            min-height: 100%;
+            overflow-x: hidden;
         }
+
+        body {
+            background: #a2a09b;
+            background: -webkit-linear-gradient(315deg, hsla(236.6, 0%, 53.52%, 1) 0, hsla(236.6, 0%, 53.52%, 0) 70%), -webkit-linear-gradient(65deg, hsla(220.75, 34.93%, 26.52%, 1) 10%, hsla(220.75, 34.93%, 26.52%, 0) 80%), -webkit-linear-gradient(135deg, hsla(46.42, 36.62%, 83.92%, 1) 15%, hsla(46.42, 36.62%, 83.92%, 0) 80%), -webkit-linear-gradient(205deg, hsla(191.32, 50.68%, 56.45%, 1) 100%, hsla(191.32, 50.68%, 56.45%, 0) 70%);
+            background: linear-gradient(135deg, hsla(236.6, 0%, 53.52%, 1) 0, hsla(236.6, 0%, 53.52%, 0) 70%), linear-gradient(25deg, hsla(220.75, 34.93%, 26.52%, 1) 10%, hsla(220.75, 34.93%, 26.52%, 0) 80%), linear-gradient(315deg, hsla(46.42, 36.62%, 83.92%, 1) 15%, hsla(46.42, 36.62%, 83.92%, 0) 80%), linear-gradient(245deg, hsla(191.32, 50.68%, 56.45%, 1) 100%, hsla(191.32, 50.68%, 56.45%, 0) 70%);
+        }
+
+        a {
+            color: #486173;
+        }
+
+        input, label {
+            vertical-align: middle;
+            white-space: normal;
+            background: 0 0;
+            line-height: 1;
+        }
+
+        label {
+            position: relative;
+            display: block;
+        }
+
+        p::first-letter {
+            text-transform: uppercase;
+        }
+
         .container {
             max-width: 600px;
-            margin: 50px auto;
+            margin: 0 auto;
+            margin-top: 50px;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: #fff;
             border-radius: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
         }
+
         table {
             width: 100%;
             margin-top: 20px;
             border-collapse: collapse;
+            color: #fff;
         }
+
         th, td {
             padding: 10px;
             border-bottom: 1px solid #ddd;
         }
+
         th {
             background-color: #f2f2f2;
         }
+
         h2 {
             text-align: center;
             margin-bottom: 20px;
             color: #333;
         }
+
         .btn {
             display: inline-block;
             padding: 10px 20px;
@@ -47,9 +76,11 @@
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
+
         .btn:hover {
             background-color: #45a049;
         }
+
         @media only screen and (max-width: 600px) {
             .container {
                 width: 90%;
@@ -58,25 +89,25 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Informasi Pelanggan Hotspot SATRIA.NET</h2>
-        <table>
-            <tr>
-                <th>Username :</th>
-                <td>$(username)</td>
-            </tr>
-            <tr>
-                <th>Password :</th>
-                <td>$(password)</td>
-            </tr>
-            <tr>
-                <th>Jenis Langganan :</th>
-                <td>$(profile)</td>
-            </tr>
-        </table>
-    </div>
-    <div style="text-align:center;margin-top:20px;">
-        <a href="javascript:history.go(-1);" class="btn">Kembali</a>
-    </div>
+<div class="container">
+    <h2><center>Informasi Pelanggan Hotspot SATRIA.NET</center></h2>
+    <table>
+        <tr>
+            <th>Username</th>
+            <td><?php echo $user['name']; ?></td>
+        </tr>
+        <tr>
+            <th>Password</th>
+            <td><?php echo $user['password']; ?></td>
+        </tr>
+        <tr>
+            <th>Jenis Langganan</th>
+            <td><?php echo $user['profile']; ?></td>
+        </tr>
+    </table>
+</div>
+<div style="text-align:center;margin-top:20px;">
+    <a href="javascript:history.go(-1);" class="btn">Kembali</a>
+</div>
 </body>
 </html>
