--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
             width: 100%;
             margin-top: 20px;
             border-collapse: collapse;
+            font-size: 16px;
         }
 
         th, td {
-            padding: 10px;
+            padding: 15px;
             border-bottom: 1px solid #ddd;
             color: #000;
         }
