--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             width: 100%;
             margin-top: 20px;
             border-collapse: collapse;
-            font-size: 16px;
+            font-size: 20px; /* Ukuran font lebih besar */
         }
 
         th, td {
-            padding: 15px;
+            padding: 20px; /* Padding lebih besar */
             border-bottom: 1px solid #ddd;
             color: #000;
         }
