--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             width: 100%;
             margin-top: 20px;
             border-collapse: collapse;
-            font-size: 20px; /* Ukuran font lebih besar */
         }
 
         th, td {
@@ -68,6 +67,9 @@
         @media only screen and (max-width: 600px) {
             .container {
                 width: 90%;
+            }
+            table {
+                font-size: 16px; /* Ukuran font pada tabel di perangkat seluler */
             }
         }
     </style>
