--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                 font-size: 16px; /* Ukuran font pada tabel di perangkat seluler */
             }
         }
+
+        @media only screen and (min-width: 601px) {
+            .container {
+                width: 80%; /* Lebar kontainer di desktop */
+            }
+        }
     </style>
 </head>
 <body>
