--- a/index.html
+++ b/index.html
@@ -5,26 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informasi Pelanggan SATRIA.NET</title>
     <style>
-        body, html {
-            min-height: 100%;
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        body {
             background: #a2a09b;
             background: -webkit-linear-gradient(315deg, hsla(236.6, 0%, 53.52%, 1) 0, hsla(236.6, 0%, 53.52%, 0) 70%), -webkit-linear-gradient(65deg, hsla(220.75, 34.93%, 26.52%, 1) 10%, hsla(220.75, 34.93%, 26.52%, 0) 80%), -webkit-linear-gradient(135deg, hsla(46.42, 36.62%, 83.92%, 1) 15%, hsla(46.42, 36.62%, 83.92%, 0) 80%), -webkit-linear-gradient(205deg, hsla(191.32, 50.68%, 56.45%, 1) 100%, hsla(191.32, 50.68%, 56.45%, 0) 70%);
             background: linear-gradient(135deg, hsla(236.6, 0%, 53.52%, 1) 0, hsla(236.6, 0%, 53.52%, 0) 70%), linear-gradient(25deg, hsla(220.75, 34.93%, 26.52%, 1) 10%, hsla(220.75, 34.93%, 26.52%, 0) 80%), linear-gradient(315deg, hsla(46.42, 36.62%, 83.92%, 1) 15%, hsla(46.42, 36.62%, 83.92%, 0) 80%), linear-gradient(245deg, hsla(191.32, 50.68%, 56.45%, 1) 100%, hsla(191.32, 50.68%, 56.45%, 0) 70%);
+            color: #000;
         }
 
         .container {
+            max-width: 600px;
             margin: 50px auto;
             padding: 20px;
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-            color: #000;
         }
 
         table {
@@ -34,9 +31,8 @@
         }
 
         th, td {
-            padding: 20px;
+            padding: 10px;
             border-bottom: 1px solid #ddd;
-            color: #000;
         }
 
         th {
@@ -46,7 +42,6 @@
         h2 {
             text-align: center;
             margin-bottom: 20px;
-            color: #333;
         }
 
         .btn {
@@ -65,16 +60,7 @@
 
         @media only screen and (max-width: 600px) {
             .container {
-                width: 100%; /* Lebar penuh pada perangkat seluler */
-            }
-            table {
-                font-size: 16px; /* Ukuran font pada tabel di perangkat seluler */
-            }
-        }
-
-        @media only screen and (min-width: 601px) {
-            .container {
-                max-width: 600px; /* Lebar maksimum 600px pada desktop */
+                width: 90%;
             }
         }
     </style>
