--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Informasi Pelanggan SATRIA.NET</title>
     <style>
         body, html {
@@ -19,8 +19,12 @@
         }
 
         .container {
-            max-width: 600px;
-            margin: 50px auto;
+            width: 100vw; /* Lebar kontainer 100% dari lebar viewport */
+            height: 100vh; /* Tinggi kontainer 100% dari tinggi viewport */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             padding: 20px;
             background-color: #fff;
             border-radius: 10px;
@@ -88,9 +92,9 @@
             <td><?php echo $user['profile']; ?></td>
         </tr>
     </table>
-</div>
-<div style="text-align:center;margin-top:20px;">
-    <a href="javascript:history.go(-1);" class="btn">Kembali</a>
+    <div style="text-align:center;margin-top:20px;">
+        <a href="javascript:history.go(-1);" class="btn">Kembali</a>
+    </div>
 </div>
 </body>
 </html>
