--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Informasi Pelanggan SATRIA.NET</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Informasi Pelanggan SATRIA.NET</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        body, html {
+            min-height: 100%;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
             background: #a2a09b;
             background: -webkit-linear-gradient(315deg, hsla(236.6, 0%, 53.52%, 1) 0, hsla(236.6, 0%, 53.52%, 0) 70%), -webkit-linear-gradient(65deg, hsla(220.75, 34.93%, 26.52%, 1) 10%, hsla(220.75, 34.93%, 26.52%, 0) 80%), -webkit-linear-gradient(135deg, hsla(46.42, 36.62%, 83.92%, 1) 15%, hsla(46.42, 36.62%, 83.92%, 0) 80%), -webkit-linear-gradient(205deg, hsla(191.32, 50.68%, 56.45%, 1) 100%, hsla(191.32, 50.68%, 56.45%, 0) 70%);
             background: linear-gradient(135deg, hsla(236.6, 0%, 53.52%, 1) 0, hsla(236.6, 0%, 53.52%, 0) 70%), linear-gradient(25deg, hsla(220.75, 34.93%, 26.52%, 1) 10%, hsla(220.75, 34.93%, 26.52%, 0) 80%), linear-gradient(315deg, hsla(46.42, 36.62%, 83.92%, 1) 15%, hsla(46.42, 36.62%, 83.92%, 0) 80%), linear-gradient(245deg, hsla(191.32, 50.68%, 56.45%, 1) 100%, hsla(191.32, 50.68%, 56.45%, 0) 70%);
         }
 
-        a {
-            color: #486173;
-        }
-
         .container {
             max-width: 600px;
-            margin: 0 auto;
-            margin-top: 50px;
+            margin: 50px auto;
             padding: 20px;
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+            color: #000;
         }
 
         table {
@@ -36,6 +37,7 @@
         th, td {
             padding: 10px;
             border-bottom: 1px solid #ddd;
+            color: #000;
         }
 
         th {
@@ -70,25 +72,25 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2><center>Informasi Pelanggan Hotspot SATRIA.NET</center></h2>
-        <table>
-            <tr>
-                <th>Username</th>
-                <td><?php echo $user['name']; ?></td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td><?php echo $user['password']; ?></td>
-            </tr>
-            <tr>
-                <th>Jenis Langganan</th>
-                <td><?php echo $user['profile']; ?></td>
-            </tr>
-        </table>
-    </div>
-    <div style="text-align:center;margin-top:20px;">
-        <a href="javascript:history.go(-1);" class="btn">Kembali</a>
-    </div>
+<div class="container">
+    <h2>Informasi Pelanggan Hotspot SATRIA.NET</h2>
+    <table>
+        <tr>
+            <th>Username</th>
+            <td><?php echo $user['name']; ?></td>
+        </tr>
+        <tr>
+            <th>Password</th>
+            <td><?php echo $user['password']; ?></td>
+        </tr>
+        <tr>
+            <th>Jenis Langganan</th>
+            <td><?php echo $user['profile']; ?></td>
+        </tr>
+    </table>
+</div>
+<div style="text-align:center;margin-top:20px;">
+    <a href="javascript:history.go(-1);" class="btn">Kembali</a>
+</div>
 </body>
 </html>
