--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </style>
 </head>
 <body>
-    <img src="https://deposit.pictures/p/7e3e3608af314ba98b431dfee3339ae8" alt="Your Image">
+    <img src="https://telegra.ph/file/21b308c5c65dd00da5da2.jpg" alt="Your Image">
 </body>
 </html>
