--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </style>
 </head>
 <body>
-    <img src="https://telegra.ph/file/21b308c5c65dd00da5da2.jpg" alt="Your Image">
+    <img src="https://ibb.co.com/Mfs2bQX" alt="Your Image">
 </body>
 </html>
