--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display Image</title>
+    <title>Display Linked Image</title>
     <style>
         /* Agar gambar berada di tengah halaman */
         body, html {
@@ -22,6 +22,8 @@
     </style>
 </head>
 <body>
-    <img src="https://ibb.co.com/Mfs2bQX" alt="Your Image">
+    <a href="https://ibb.co/Mfs2bQX">
+        <img src="https://i.ibb.co/xYDCyd4/IMG-20230403-115836-431.webp" alt="IMG-20230403-115836-431" border="0">
+    </a>
 </body>
 </html>
